# connect-4-solver

./: Cargo.toml  README.md  python_code.txt  python_code2.txt
src/: game.rs  human_player.rs  main.rs  old_funcs.rs  player.rs  rand_player.rs  tile.rs
src/ai/: ai_game.rs  cashe_entry.rs  game_hashing.rs  mask.rs  mod.rs  move_generater.rs  negamax_score.rs  null_removing.rs  score_openness.rs  search_order.rs
src/ai/solvers/: mod.rs  stong_solver.rs  weak_solver.rs
src/ai/transposition_table/: file_cashe.rs  mod.rs  move_generator.rs
src/game/: bit_board.rs  mod.rs
src/testing/: mod.rs  python_exporter.rs  test_position.rs
