[package]
name = "my-project"
version = "0.1.0"
authors = ["runner"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build]
rustflags = ["-C", "target-cpu=native"]

[dependencies]
arrayvec = "0.7.4"
bytemuck = "1.16.0"
colored="2.0.0"
#postcard = { version = "1.0.8", features = ["use-std"] }
rand="0.8.5"
#serde = { version = "1.0", features = ["derive"] }
#serde_json = "1.0.111"
